--- a/app/src/main/res/layout/transfer_pay_fragment.xml
+++ b/app/src/main/res/layout/transfer_pay_fragment.xml
@@ -611,7 +611,7 @@
                 android:ellipsize="end"
                 android:textSize="@dimen/textSize14sp"
                 android:background="@null"
-                android:hint="No file chosen"
+                android:hint="@string/no_file"
                 android:enabled="false"
                 android:textColor="@color/color_FFFFFF_414655"
                 android:textColorHint="@color/color_C9CFD7"
