修改获取控件方式，通过binding获取

--- a/app/src/main/res/layout/content_bet_info_item_v3.xml
+++ b/app/src/main/res/layout/content_bet_info_item_v3.xml
@@ -355,7 +355,7 @@
                         tools:visibility="visible" />
 
                 </LinearLayout>
-
+                <!-- 单关赔率变化提示框-->
                 <include
                     android:id="@+id/includeOddsLayout"
                     layout="@layout/include_bet_odds_tips_single"
