--- a/app/src/main/res/layout/content_money_pay_type_rv.xml
+++ b/app/src/main/res/layout/content_money_pay_type_rv.xml
@@ -18,7 +18,7 @@
         android:layout_marginTop="@dimen/margin_9"
         tools:src="@drawable/ic_bank_atm" />
 
-    <TextView
+    <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/tv_type"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -29,6 +29,9 @@
         android:gravity="center_vertical"
         android:paddingEnd="4dp"
         android:textColor="@color/selector_blue_black"
+        android:autoSizeMaxTextSize="@dimen/textSize12sp"
+        android:autoSizeMinTextSize="@dimen/textSize10sp"
+        android:autoSizeTextType="uniform"
         android:singleLine="true"
         android:textSize="@dimen/textSize12sp"
         tools:text="银行卡转账" />
