--- a/app/src/main/res/layout/fragment_bet_receipt.xml
+++ b/app/src/main/res/layout/fragment_bet_receipt.xml
@@ -81,13 +81,15 @@
 
             <TextView
                 android:id="@+id/tv_bet_list_count"
-                android:layout_width="18dp"
-                android:layout_height="wrap_content"
+                android:layout_width="wrap_content"
+                android:layout_height="20dp"
+                android:minWidth="20dp"
                 android:layout_marginStart="4dp"
                 android:gravity="center"
                 android:textColor="@color/color_FFFFFF_FFFFFF"
-                android:textSize="@dimen/textSize16sp"
-                android:textStyle="bold"
+                android:textSize="@dimen/textSize14sp"
+                app:autoSizeMaxTextSize="@dimen/textSize14sp"
+                app:autoSizeMinTextSize="@dimen/textSize12sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/tv_bet_list"
                 app:layout_constraintTop_toTopOf="parent"
