--- a/app/src/main/res/layout/dialog_custom_alert.xml
+++ b/app/src/main/res/layout/dialog_custom_alert.xml
@@ -22,7 +22,7 @@
             android:id="@+id/tv_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginVertical="12dp"
+            android:layout_marginTop="20dp"
             android:gravity="center"
             android:textColor="@color/color_CCCCCC_000000"
             android:textSize="@dimen/textSize16sp"
@@ -45,25 +45,23 @@
 
         <ScrollView
             android:id="@+id/sv_block_content"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
+            android:layout_marginHorizontal="32dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="24dp"
-            android:layout_marginBottom="24dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="14dp"
             android:overScrollMode="never"
             app:layout_constraintBottom_toTopOf="@id/block_bottom_bar"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHeight_max="460dp"
+            app:layout_constraintHeight_max="170dp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/divider2"
-            app:layout_constraintWidth_min="300dp">
+            app:layout_constraintTop_toBottomOf="@id/divider2">
 
             <TextView
                 android:id="@+id/tv_message"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center_horizontal"
-                android:layout_marginLeft="@dimen/margin_12"
-                android:layout_marginRight="@dimen/margin_12"
                 android:textColor="@color/color_BBBBBB_333333"
                 android:textSize="@dimen/textSize14sp"
                 tools:text="訊息" />
