--- a/app/src/main/res/layout/include_bet_odds_tips_parlay.xml
+++ b/app/src/main/res/layout/include_bet_odds_tips_parlay.xml
@@ -70,8 +70,9 @@
         android:layout_width="match_parent"
         android:text="@string/str_odds_already_changed_check_please"
         android:paddingStart="14dp"
+        android:paddingEnd="8dp"
         android:textColor="@color/color_FFFFFF"
         android:drawablePadding="8dp"
-        android:textSize="16sp"
-        android:layout_height="36dp" />
+        android:textSize="14sp"
+        android:layout_height="39dp" />
 </FrameLayout>
