--- a/app/src/main/res/layout/view_game_tab_match_type_v4.xml
+++ b/app/src/main/res/layout/view_game_tab_match_type_v4.xml
@@ -1,76 +1,70 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.google.android.material.tabs.TabLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/tabLayout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:elevation="1dp">
+    android:clipToPadding="false"
+    android:elevation="1dp"
+    android:overScrollMode="never"
+    android:paddingHorizontal="9dp"
+    app:layout_constraintTop_toTopOf="parent"
+    app:tabGravity="fill"
+    app:tabIndicator="@drawable/bg_matchtype_indicator"
+    app:tabIndicatorFullWidth="false"
+    app:tabMinWidth="52dp"
+    app:tabMode="scrollable"
+    app:tabPaddingEnd="9dp"
+    app:tabPaddingStart="9dp"
+    app:tabRippleColor="@null"
+    tools:layout="@layout/home_cate_tab">
 
-    <com.google.android.material.tabs.TabLayout
-        android:id="@+id/tabLayout"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:paddingHorizontal="9dp"
-        android:overScrollMode="never"
-        app:layout_constraintTop_toTopOf="parent"
-        app:tabPaddingStart="9dp"
-        app:tabPaddingEnd="9dp"
-        android:clipToPadding="false"
-        app:tabGravity="fill"
-        app:tabIndicatorFullWidth="false"
-        app:tabIndicator="@drawable/bg_matchtype_indicator"
-        app:tabMinWidth="52dp"
-        app:tabMode="scrollable"
-        app:tabRippleColor="@null"
-        tools:layout="@layout/home_cate_tab">
+    <!--<com.google.android.material.tabs.TabItem
+        android:id="@+id/tab_all"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout="@layout/home_cate_tab" />-->
 
-        <!--<com.google.android.material.tabs.TabItem
-            android:id="@+id/tab_all"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout="@layout/home_cate_tab" />-->
+    <com.google.android.material.tabs.TabItem
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout="@layout/home_cate_tab" />
 
-        <com.google.android.material.tabs.TabItem
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout="@layout/home_cate_tab" />
+    <com.google.android.material.tabs.TabItem
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout="@layout/home_cate_tab" />
 
-        <com.google.android.material.tabs.TabItem
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout="@layout/home_cate_tab" />
+    <com.google.android.material.tabs.TabItem
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout="@layout/home_cate_tab" />
 
-        <com.google.android.material.tabs.TabItem
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout="@layout/home_cate_tab" />
+    <com.google.android.material.tabs.TabItem
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout="@layout/home_cate_tab" />
 
-        <com.google.android.material.tabs.TabItem
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout="@layout/home_cate_tab" />
+    <com.google.android.material.tabs.TabItem
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout="@layout/home_cate_tab" />
 
-        <com.google.android.material.tabs.TabItem
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout="@layout/home_cate_tab" />
+    <com.google.android.material.tabs.TabItem
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout="@layout/home_cate_tab" />
 
-        <com.google.android.material.tabs.TabItem
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout="@layout/home_cate_tab" />
+    <com.google.android.material.tabs.TabItem
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout="@layout/home_cate_tab" />
 
-        <com.google.android.material.tabs.TabItem
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout="@layout/home_cate_tab" />
+    <!--        <com.google.android.material.tabs.TabItem-->
+    <!--            android:id="@+id/tab_eps"-->
+    <!--            android:layout_width="wrap_content"-->
+    <!--            android:layout_height="wrap_content"-->
+    <!--            android:layout="@layout/home_cate_tab" />-->
 
-        <!--        <com.google.android.material.tabs.TabItem-->
-        <!--            android:id="@+id/tab_eps"-->
-        <!--            android:layout_width="wrap_content"-->
-        <!--            android:layout_height="wrap_content"-->
-        <!--            android:layout="@layout/home_cate_tab" />-->
-
-    </com.google.android.material.tabs.TabLayout>
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</com.google.android.material.tabs.TabLayout>
