--- a/app/src/main/res/layout/online_pay_fragment.xml
+++ b/app/src/main/res/layout/online_pay_fragment.xml
@@ -267,6 +267,7 @@
             android:layout_marginEnd="@dimen/margin_20"
             android:background="@drawable/ic_submit"
             android:gravity="center"
+            android:textAllCaps="false"
             android:text="@string/btn_submit"
             android:textColor="@color/color_FFFFFF_FFFFFF"
             android:textSize="@dimen/textSize16sp"
@@ -284,7 +285,7 @@
                 android:layout_height="wrap_content"
                 android:text="@string/customer_service"
                 android:textColor="@color/color_A5A9B3"
-                android:textSize="@dimen/textSize14sp"/>
+                android:textSize="@dimen/textSize14sp" />
 
             <TextView
                 android:id="@+id/tv_service"
