--- a/app/src/main/res/layout/transfer_pay_fragment.xml
+++ b/app/src/main/res/layout/transfer_pay_fragment.xml
@@ -582,11 +582,12 @@
                 android:layout_height="1dp"/>
             <Button
                 android:id="@+id/bt_check_files"
-                android:text="选择文件"
+                android:text="@string/select_file1"
                 android:textColor="@color/color_2b2b2b_ffffff"
                 android:textSize="@dimen/textSize14sp"
                 android:layout_marginEnd="@dimen/margin_14"
                android:layout_marginTop="@dimen/margin_8"
+                android:textAllCaps="false"
                 android:background="@drawable/btn_send_sms"
                 app:layout_constraintTop_toBottomOf="@+id/view_upload"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -758,6 +759,7 @@
             android:layout_marginEnd="@dimen/margin_20"
             android:background="@drawable/ic_submit"
             android:gravity="center"
+            android:textAllCaps="false"
             android:text="@string/btn_submit"
             android:textColor="@color/color_FFFFFF_FFFFFF"
             android:textSize="@dimen/textSize16sp"
