1.修改投注成功按钮ui显示问题 2.去掉投注成功文字提示语

--- a/app/src/main/res/layout/item_parlay_receipt.xml
+++ b/app/src/main/res/layout/item_parlay_receipt.xml
@@ -63,7 +63,7 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
                     android:textSize="@dimen/textSize12sp"
-                    android:visibility="visible"
+                    android:visibility="gone"
                     android:drawablePadding="6dp"
                     tools:drawableStart="@drawable/ic_bet_check_tip"
                     tools:text="已确认"
