--- a/app/src/main/res/layout/content_bet_info_item_v3.xml
+++ b/app/src/main/res/layout/content_bet_info_item_v3.xml
@@ -214,9 +214,10 @@
                         android:text="@string/bet_win"
                         android:textColor="@color/color_9BB3D9_535D76"
                         android:textSize="@dimen/textSize12sp"
+                        app:layout_constraintStart_toEndOf="@id/guideline_input"
                         app:layout_constraintBottom_toBottomOf="@+id/et_win"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="@+id/et_win" />
+                        app:layout_constraintTop_toTopOf="@+id/et_win"
+                        tools:layout_editor_absoluteX="8dp" />
 
                     <EditText
                         android:id="@+id/et_win"
@@ -234,7 +235,7 @@
                         android:textStyle="bold"
                         android:visibility="visible"
                         app:layout_constraintBottom_toBottomOf="@id/et_bet"
-                        app:layout_constraintEnd_toEndOf="@+id/guideline_input"
+                        app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toEndOf="@+id/tv_win"
                         app:layout_constraintTop_toTopOf="@+id/et_bet" />
 
@@ -264,7 +265,7 @@
                         android:textColor="@color/color_9BB3D9_535D76"
                         android:textSize="@dimen/textSize12sp"
                         app:layout_constraintBottom_toBottomOf="@+id/et_bet"
-                        app:layout_constraintStart_toStartOf="@+id/guideline_input"
+                        app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="@+id/et_bet" />
 
                     <EditText
@@ -278,12 +279,13 @@
                         android:inputType="numberDecimal"
                         android:letterSpacing="0.05"
                         android:maxLength="14"
+                        android:layout_marginEnd="10dp"
                         android:paddingHorizontal="10dp"
                         android:textColor="@color/color_9BB3D9_535D76"
                         android:textSize="@dimen/textSize12sp"
                         android:textStyle="bold"
                         android:visibility="visible"
-                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintEnd_toEndOf="@id/guideline_input"
                         app:layout_constraintStart_toEndOf="@+id/tv_bet"
                         app:layout_constraintTop_toTopOf="parent" />
 
@@ -305,6 +307,7 @@
                 </androidx.constraintlayout.widget.ConstraintLayout>
                 <!--region 提示文字 -->
                 <LinearLayout
+                    tools:visibility="gone"
                     android:id="@+id/ll_single_tips"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
