--- a/app/src/main/res/layout/item_match_receipt.xml
+++ b/app/src/main/res/layout/item_match_receipt.xml
@@ -74,7 +74,7 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/topContainer"
                     android:textSize="@dimen/textSize12sp"
-                    android:visibility="visible"
+                    android:visibility="gone"
                     android:drawablePadding="6dp"
                     tools:drawableStart="@drawable/ic_bet_check_tip"
                     tools:text="@string/bet_info_add_bet_success"
