--- a/app/src/main/res/layout/item_sport_odd.xml
+++ b/app/src/main/res/layout/item_sport_odd.xml
@@ -555,8 +555,7 @@
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rv_league_odd_btn_pager_main"
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1"
+                android:layout_height="match_parent"
                 android:nestedScrollingEnabled="false"
                 android:overScrollMode="never"
                 tools:itemCount="1"
