--- a/app/src/main/res/layout/view_account_history_next_title_bar.xml
+++ b/app/src/main/res/layout/view_account_history_next_title_bar.xml
@@ -18,10 +18,10 @@
 
     <ImageView
         android:id="@+id/iv_back"
-        android:layout_width="24dp"
-        android:layout_height="24dp"
+        android:layout_width="50dp"
+        android:padding="17dp"
+        android:layout_height="50dp"
         android:paddingVertical="4dp"
-        android:layout_marginStart="14dp"
         android:src="@drawable/ic_arrow_white"
         app:layout_constraintBottom_toBottomOf="@id/iv_bg"
         app:layout_constraintStart_toStartOf="parent"
@@ -33,12 +33,14 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:gravity="center"
-        android:textStyle="bold"
         android:text="@string/bet_detail"
         android:textColor="@color/color_FFFFFF_414655"
         android:textSize="@dimen/textSize18sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@id/iv_bg"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0"
+        tools:layout_editor_absoluteX="0dp" />
 
     <org.cxct.sportlottery.ui.component.StatusSpinnerView
         android:id="@+id/date_selector"
