--- a/app/src/main/res/layout/view_account_balance.xml
+++ b/app/src/main/res/layout/view_account_balance.xml
@@ -34,12 +34,23 @@
                 android:src="@drawable/ic_group_7130" />
 
             <TextView
+                android:id="@+id/tv_curent_balance"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/now_balance"
                 android:textColor="@color/color_FFFFFF"
                 android:textSize="@dimen/textSize14sp"
                 android:textStyle="bold" />
+
+            <ImageView
+                android:id="@+id/iv_deposit_tip"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="2dp"
+                android:scaleType="fitXY"
+                android:layout_marginLeft="5dp"
+                android:src="@drawable/deposit_tips"
+                android:layout_toRightOf="@+id/tv_curent_balance" />
         </RelativeLayout>
 
 
