--- a/app/src/main/res/color/selector_button_odd_bottom_text.xml
+++ b/app/src/main/res/color/selector_button_odd_bottom_text.xml
@@ -2,5 +2,5 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:color="@color/color_FFFFFF" android:state_selected="true" />
     <item android:color="@color/color_FFFFFF" android:state_activated="true" />
-    <item android:color="@color/color_535D76" />
+    <item android:color="@color/color_111216" />
 </selector>
