--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -387,6 +387,7 @@
     <color name="color_E23434">#E23434</color>
     <color name="color_C9CFD7">#C9CFD7</color>
     <color name="color_414655">#414655</color>
+    <color name="color_111216">#111216</color>
     <color name="color_025BE8">#025BE8</color>
     <color name="color_A5A9B3">#A5A9B3</color>
     <color name="color_B73A20">#B73A20</color>
