--- a/app/src/main/res/layout/tab_item_home_open.xml
+++ b/app/src/main/res/layout/tab_item_home_open.xml
@@ -81,18 +81,17 @@
     </LinearLayout>
     <LinearLayout
         android:id="@+id/include_layout4"
-        android:visibility="gone"
-        android:layout_marginHorizontal="2dp"
         android:orientation="vertical"
         android:layout_width="0dp"
+        android:visibility="gone"
         android:layout_weight="1"
         android:background="@drawable/bg_tab_open_unselector"
         android:gravity="center"
-        android:layout_height="wrap_content">
+        android:layout_height="60dp">
         <ImageView
             android:src="@drawable/icon_in_play0"
-            android:layout_width="wrap_content"
-            android:layout_height="@dimen/margin_30"
+            android:layout_width="@dimen/margin_30"
+            android:layout_height="23dp"
             />
         <TextView
             android:gravity="center"
@@ -100,6 +99,7 @@
             android:textColor="@color/color_535D76"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="6dp"
             android:text="@string/home_in_play"/>
     </LinearLayout>
     <LinearLayout
