--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -159,8 +159,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginStart="14dp"
                         android:layout_marginEnd="10dp"
-
-                        android:text="@string/password_setting"
+                        android:text="@string/setting_password"
                         android:textColor="@color/color_9FADC6_535D76"
                         android:textSize="@dimen/textSize14sp" />
                     <TextView
