--- a/app/src/main/res/layout/item_sport_odd.xml
+++ b/app/src/main/res/layout/item_sport_odd.xml
@@ -26,26 +26,25 @@
             android:orientation="vertical">
 
             <LinearLayout
+                android:orientation="horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="30dp"
                 android:layout_weight="1"
-                android:gravity="center_vertical"
-                android:paddingLeft="12dp"
-                android:paddingRight="10dp">
+                android:gravity="center_vertical">
 
                 <ImageView
+                    android:layout_marginStart="2dp"
                     android:id="@+id/league_odd_match_favorite"
-                    android:layout_width="14dp"
-                    android:layout_height="14dp"
-                    android:layout_marginRight="@dimen/margin_8"
-                    android:layout_marginBottom="1dp"
+                    android:layout_width="35dp"
+                    android:layout_height="match_parent"
+                    android:padding="7dp"
                     android:src="@drawable/selector_star_v4"
                     tools:ignore="ContentDescription"
                     tools:visibility="visible" />
 
                 <LinearLayout
                     android:id="@+id/linear_layout"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center_vertical"
                     android:visibility="visible"
