--- a/app/src/main/res/layout/activity_modify_profile_info.xml
+++ b/app/src/main/res/layout/activity_modify_profile_info.xml
@@ -56,6 +56,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:imeOptions="actionNext"
+                        android:inputType="text"
                         android:maxLines="1"
                         android:textColor="@color/color_FFFFFF_DE000000"
                         android:textSize="@dimen/textSize14sp" />
