'修改密码'输入错误提示文案

--- a/app/src/main/res/layout/fragment_home_elec.xml
+++ b/app/src/main/res/layout/fragment_home_elec.xml
@@ -242,7 +242,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="6dp"
                 android:text="@string/hot_elec_game"
-                android:textAllCaps="true"
+                android:textAllCaps="false"
                 android:textColor="@color/color_414655"
                 android:textSize="@dimen/textSize14sp" />
 
@@ -252,7 +252,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="6dp"
                 android:text="@string/new_game_and_testing"
-                android:textAllCaps="true"
+                android:textAllCaps="false"
                 android:textColor="@color/color_EC9007"
                 android:textSize="@dimen/textSize14sp" />
 
