--- a/app/src/main/res/layout/fragment_main_home.xml
+++ b/app/src/main/res/layout/fragment_main_home.xml
@@ -146,38 +146,24 @@
                 android:id="@+id/view2"
                 android:background="@color/color_E1EAF2"
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/margin_12"/>
+                android:layout_height="@dimen/margin_12" />
+
             <include
                 android:id="@+id/hot_card_game_include"
-                layout="@layout/hot_card_game_include"/>
+                layout="@layout/hot_card_game_include" />
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
     </LinearLayout>
-    <LinearLayout
-        android:id="@+id/ll_come_back"
-        tools:visibility="visible"
+
+    <ImageView
+        android:id="@+id/iv_top"
+        android:src="@drawable/icon_top_arrow_up"
+        android:layout_width="70dp"
+        android:layout_height="wrap_content"
+        android:paddingHorizontal="10dp"
+        android:adjustViewBounds="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="20dp"
         android:layout_alignParentEnd="true"
-        android:orientation="horizontal"
-        android:gravity="center"
-        android:background="@drawable/btn_comeback"
-        android:paddingStart="8dp"
-        android:paddingEnd="10dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
-        <ImageView
-            android:src="@drawable/icon_top_arrow_up"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-        <TextView
-            android:id="@+id/tv_come_back"
-            android:text="@string/go_back_top"
-            android:drawablePadding="-6dp"
-            android:textColor="@color/color_181922_FFFFFF"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            />
-    </LinearLayout>
+        android:layout_marginBottom="20dp" />
 
 </RelativeLayout>
