--- a/app/src/main/res/layout/content_match_record.xml
+++ b/app/src/main/res/layout/content_match_record.xml
@@ -281,17 +281,16 @@
                     android:layout_marginHorizontal="10dp"
                     android:gravity="center_vertical">
 
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/order_number_colon"
-                        android:textColor="@color/color_A5A9B3"
-                        android:textSize="@dimen/textSize10sp" />
+                    <ImageView
+                        android:layout_width="15dp"
+                        android:layout_height="15dp"
+                        android:src="@drawable/ic_ticket"/>
 
                     <LinearLayout
                         android:id="@+id/ll_copy_bet_order"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:layout_marginLeft="4dp"
                         android:layout_weight="1"
                         android:gravity="center_vertical|left">
 
@@ -313,20 +312,16 @@
                             android:src="@drawable/ic_copy" />
                     </LinearLayout>
 
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:singleLine="true"
-                        android:ellipsize="end"
-                        android:gravity="end"
-                        android:text="@string/bet_time"
-                        android:textColor="@color/color_A5A9B3"
-                        android:textSize="@dimen/textSize10sp" />
+                    <ImageView
+                        android:layout_width="15dp"
+                        android:layout_height="15dp"
+                        android:src="@drawable/ic_clock"/>
 
                     <TextView
                         android:id="@+id/content_time_type"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_marginLeft="3dp"
                         android:textAlignment="viewEnd"
                         android:textColor="@color/color_A5A9B3"
                         android:textSize="@dimen/textSize10sp"
