--- a/app/src/main/res/layout/fragment_bet_record.xml
+++ b/app/src/main/res/layout/fragment_bet_record.xml
@@ -289,7 +289,8 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_marginHorizontal="14dp"
-            android:layout_marginBottom="18dp"
+            android:paddingBottom="18dp"
+            android:clipToPadding="false"
             android:visibility="gone"
             tools:visibility="gone"
             app:layout_constraintBottom_toBottomOf="parent"
