--- a/app/src/main/res/layout/item_account_history_next_content.xml
+++ b/app/src/main/res/layout/item_account_history_next_content.xml
@@ -332,17 +332,17 @@
                         android:layout_marginHorizontal="10dp"
                         android:gravity="center_vertical">
 
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="@string/order_number_colon"
-                            android:textColor="@color/color_A5A9B3"
-                            android:textSize="@dimen/textSize10sp" />
+                        <ImageView
+                            android:layout_width="15dp"
+                            android:layout_height="15dp"
+                            android:src="@drawable/ic_ticket"
+                            android:layout_marginRight="3dp"/>
 
                         <LinearLayout
                             android:id="@+id/ll_copy_bet_order"
-                            android:layout_width="wrap_content"
+                            android:layout_width="0dp"
                             android:layout_height="wrap_content"
+                            android:layout_weight="1"
                             android:gravity="center_vertical">
 
                             <TextView
@@ -362,14 +362,11 @@
                                 android:src="@drawable/ic_copy" />
                         </LinearLayout>
 
-                        <TextView
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:gravity="end"
-                            android:text="@string/bet_time"
-                            android:textColor="@color/color_A5A9B3"
-                            android:textSize="@dimen/textSize10sp" />
+                        <ImageView
+                            android:layout_width="15dp"
+                            android:layout_height="15dp"
+                            android:src="@drawable/ic_clock"
+                            android:layout_marginRight="3dp"/>
 
                         <TextView
                             android:id="@+id/tv_time"
