--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -245,6 +245,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/cb_remember_password" />
 
             <LinearLayout
+                android:id="@+id/lin_register"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/margin_14"
