--- a/app/src/main/res/layout/content_match_record.xml
+++ b/app/src/main/res/layout/content_match_record.xml
@@ -288,7 +288,7 @@
 
                     <LinearLayout
                         android:id="@+id/ll_copy_bet_order"
-                        android:layout_width="match_parent"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="4dp"
                         android:layout_weight="1"
@@ -298,13 +298,10 @@
                             android:id="@+id/content_order_no"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:textAlignment="viewStart"
                             android:textColor="@color/color_A5A9B3"
                             android:textSize="@dimen/textSize10sp"
-                            android:singleLine="true"
-                            android:ellipsize="end"
                             tools:text="b000003612091822030128" />
+
                         <ImageView
                             android:layout_width="10dp"
                             android:layout_height="10dp"
