--- a/app/src/main/res/layout/view_account_balance.xml
+++ b/app/src/main/res/layout/view_account_balance.xml
@@ -44,8 +44,8 @@
 
             <ImageView
                 android:id="@+id/iv_deposit_tip"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="@dimen/margin_15"
+                android:layout_height="@dimen/margin_15"
                 android:layout_marginTop="2dp"
                 android:scaleType="fitXY"
                 android:layout_marginLeft="5dp"
