--- a/app/src/main/res/layout/fragment_self_limit_bet.xml
+++ b/app/src/main/res/layout/fragment_self_limit_bet.xml
@@ -138,6 +138,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/margin_8"
         android:text="@string/self_limit_error"
+        android:layout_marginHorizontal="@dimen/margin_15"
         android:textColor="@color/color_E44438_e44438"
         android:textSize="@dimen/textSize12sp"
         android:visibility="gone" />
