--- a/app/src/main/res/layout/fragment_self_limit_froze.xml
+++ b/app/src/main/res/layout/fragment_self_limit_froze.xml
@@ -152,7 +152,8 @@
         android:text="@string/self_limit_error"
         android:textColor="@color/color_E44438_e44438"
         android:textSize="@dimen/textSize12sp"
-        android:visibility="gone" />
+        android:layout_marginHorizontal="@dimen/margin_15"
+        android:visibility="visible" />
 
     <TextView
         android:id="@+id/btnConfirm"
