修改忘记密码布局微调

--- a/app/src/main/res/layout/activity_forget_password.xml
+++ b/app/src/main/res/layout/activity_forget_password.xml
@@ -158,9 +158,8 @@
                         android:layout_marginStart="10dp"
                         android:background="@color/transparent"
                         android:gravity="center"
-                        android:layout_marginBottom="@dimen/margin_8"
+                        android:layout_marginTop="@dimen/margin_8"
                         app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintBottom_toBottomOf="@+id/et_verification_code"
                         app:layout_constraintTop_toTopOf="@+id/et_verification_code"
                         android:minWidth="80dp"
                         android:orientation="horizontal">
@@ -278,10 +277,9 @@
                         android:visibility="visible"
                         android:enabled="false"
                         android:alpha="0.5"
-                        android:layout_marginBottom="@dimen/margin_15"
+                        android:layout_marginTop="@dimen/margin_15"
                         app:layout_constraintEnd_toEndOf="@+id/et_sms_valid_code"
-                        app:layout_constraintTop_toTopOf="@+id/et_sms_valid_code"
-                        app:layout_constraintBottom_toBottomOf="@+id/et_sms_valid_code" />
+                        app:layout_constraintTop_toTopOf="@+id/et_sms_valid_code" />
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
             <TextView
